updated link colors for visibility, added schema markup, fixed Google+ authorship

--- a/assets/sass/_base.scss
+++ b/assets/sass/_base.scss
@@ -70,13 +70,14 @@
 	}
 
 // Links
-	a, a:visited { color: $link-color; text-decoration: none; outline: 0; }
+	a, a:visited { color: $link-color; text-decoration: underline; outline: 0; }
 	a:hover, a:focus { 
-		color: darken($link-color, 15%);
+		color: darken($yellow, 15%);
 		-webkit-transition: $ease-in-out;
 		-moz-transition: $ease-in-out;
 		-o-transition: $ease-in-out;
 		transition: $ease-in-out; 
+    text-decoration: none;
 	}
 	p a, p a:visited { line-height: inherit; }
 
