--- a/assets/sass/_buttons.scss
+++ b/assets/sass/_buttons.scss
@@ -1,7 +1,7 @@
 // Buttons
 .button, .button-blog {
   display: inline-block;
-  border: 3px solid $link-color;
+  border: 3px solid $yellow;
   border-radius: 6px;
   cursor: pointer;
   color: $link-color;
@@ -25,8 +25,8 @@
 }
 
 .button:hover, .button-blog:hover {
-  background-color: darken($link-color, 15%);
-  border: 3px solid darken($link-color, 15%);
+  background-color: darken($yellow, 15%);
+  border: 3px solid darken($yellow, 15%);
   color: #fff;
 }
 
