--- a/assets/sass/_forms.scss
+++ b/assets/sass/_forms.scss
@@ -23,7 +23,7 @@ textarea:focus {
 
 input[type="submit"] {
 	border: 3px solid $yellow;
-	color: $yellow;
+	color: $link-color;
 }
 
 input[type="submit"]:hover {
