--- a/assets/sass/_style.scss
+++ b/assets/sass/_style.scss
@@ -21,7 +21,7 @@ nav {
 			text-decoration: none;
 			color: $gun;
 
-			&:hover, &:focus { color: darken($link-color, 15%); }
+			&:hover, &:focus { color: darken($yellow, 15%); }
 		}
 }
 
