--- a/assets/sass/_variables.scss
+++ b/assets/sass/_variables.scss
@@ -14,7 +14,7 @@
 
 	$bg-color: #fff;
 
-	$link-color: $yellow;
+	$link-color: $gun;
 
 // Typography
 
